--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   border-radius: 25px;
   margin-left: 20px;
 }
-#all-products {
+.all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   /* border: 1px solid black; */
@@ -68,7 +68,7 @@ body {
 }
 @media only screen and (max-width: 768px) {
 
-  #all-products {
+  .all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     /* border: 1px solid black; */
@@ -95,7 +95,7 @@ body {
   }
 }
 @media only screen and (max-width: 468px) {
-  #all-products {
+  .all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
